Slim build of Slimefun v4.9-UNOFFICIAL (experimental @5374034)
- minimizeJar: 948 -> 773 classes, jar 2.09MB -> 1.703MB (-18.5%)
- Remove PaperLib (replaced with local stub), drops 30 classes
- Remove all non-English language files (210 files)
- Fix MinecraftVersion detection for 1.21.10 and 26.1.x
- Update plugin.yml/README/LICENSE/.gitignore for the slim release